--- a/scss/header.scss
+++ b/scss/header.scss
@@ -7,6 +7,11 @@ html {
   padding: 0;
 }
 
+.container{
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
 .clearfix:after {
   content: "";
   display: table;
